--- a/package.json
+++ b/package.json
@@ -1,12 +1,19 @@
 {
   "name": "getdsa",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/roy7077/npm_dsa"
+  },
   "author": "sagar ray",
   "license": "ISC",
-  "type": "module"
+  "type": "module",
+  "dependencies": {
+    "getdsa": "^1.0.0"
+  }
 }
